# layus.github.io

./: .envrc  .gitignore  CNAME  _config.yml  about.html  archive.html  atom.xml  blog-hakyll.cabal  contact.html  contact.md  index.atom  index.html  index.rss  release.nix  result  rss.xml  site.hs
.github/workflows/: main.yml
_layouts/: default.html
_posts/: 2017-09-06-Tup-Graphs.md
attachments/: 2020-09-01-nix-hashes.nix
css/: default.css  default.scss  syntax.css
nix/: sources.json
posts/: 2020-06-12-nix-overlays.html  2020-06-12-nix-overlays.markdown  2020-08-11-monads-vs-waterfall.html  2020-08-11-monads-vs-waterfall.lhs  2020-09-01-nix-hashes.html  2020-09-01-nix-hashes.md  2020-09-21-self-tracking.md  2020-09-28-graph-compression.md  2020-11-09-what-are-build-systems.html  2020-11-09-what-are-build-systems.md  2021-01-22-build-systems-tour.html  2021-01-22-build-systems-tour.md  2021-06-21-frankenbuilds.md  2021-06-25-frankenbuilds.html  2021-06-25-frankenbuilds.md  2021-07-05-compose-it.md
scripts/: pdflatex.sh
tags/: advent of code.atom  advent of code.html  advent of code.rss  build systems.atom  build systems.html  build systems.rss  haskell.atom  haskell.html  haskell.rss  nix.atom  nix.html  nix.rss
templates/: default.html  default.tikz  post-list.html  tag.html
tikz/2020-06-12-nix-overlays/: nixpkgs+ff.tikz  nixpkgs+zlib.tikz  nixpkgs.tikz  nixpkgs_layers.tikz  nixpkgs_layers2.tikz  nixpkgs_layers_plus.tikz
